# model-deployment-and-exploratory-data-analysis

./: README.md
02-MODEL_DEPLOYMENT/: README.md  docker-compose.yaml  job_resume_similarity_demo.ipynb
02-MODEL_DEPLOYMENT/api/: Dockerfile  pyproject.toml
02-MODEL_DEPLOYMENT/api/api/: main.py
02-MODEL_DEPLOYMENT/api/tests/: conftest.py  test_api.py
02-MODEL_DEPLOYMENT/nginx/: nginx.conf
03 - EXPLORATORY DATA ANALYSIS DEMONSTRATION/: README.md
03_EXPLORATORY-DATA-ANALYSIS/: eda_movie_ratings.ipynb
