[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Hiago dos Santos Rabelo <hiagop22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
fastapi = "^0.111.0"
sentence-transformers = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
